--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>EasyExam</title>
-  <base href="/">
+  <base href="/" />
+  <title>Angular 7 User Registration and Login Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- bootstrap css -->
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
+
+  <style>
+    a { cursor: pointer }
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+<app-root>Loading...</app-root>
 </body>
 </html>
