Embelezando, traduzindo e corrigindo detalhes de config.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #3f51b5">
 <head>
   <base href="/" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -7,6 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<app-root>Loading...</app-root>
+<app-root style="color: aliceblue; text-align: center">Loading...</app-root>
 </body>
 </html>
